Bug Fixes for Live version #3 1. Fix comment margins, if comments more than two 2. Fix search criteria for tags 3. Fix date inputs on mobile devices 4. Fix favicon error 5. Added user avatar for profile page

--- a/src/main/frontend/src/styles/scss/forum.scss
+++ b/src/main/frontend/src/styles/scss/forum.scss
@@ -1163,6 +1163,12 @@ textarea {
     .user-menu__title {
         @include flexible();
         padding: 0.5rem;
+
+        .user-menu__title-avatar {
+            max-width: 80px;
+            max-height: 80px;
+            border-radius: 40px;
+        }
     }
 
     .user-menu__title-nickname {
